--- a/public/05.html
+++ b/public/05.html
@@ -341,6 +341,114 @@
 									</div>
 								</div>
 							</div>
+							<div class="sTable__group-tr">
+								<p class="strong"> 31. Муниципальные структуры по работе с мололодежью, в том числе:</p>
+								<div class="sTable__tr">
+									<p class="small">32. муниципальные органы исполненительной власти</p>
+									<div class="sTable__row row">
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="10" placeholder="0"/>
+											<div class="sTable__after-text">ЕД
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="100" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="30" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="500 000" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+									</div>
+								</div>
+								<div class="sTable__tr">
+									<p class="small">33. Муниципальные бюджетные учреждения</p>
+									<div class="sTable__row row">
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="10" placeholder="0"/>
+											<div class="sTable__after-text">ЕД
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="100" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="30" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="500 000" placeholder="0"/>
+											<div class="sTable__after-text">Ч
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+										<div class="sTable__td col form-group">
+											<input class="form-control form-control-sm" type="text" value="150 000" placeholder="0"/>
+											<div class="sTable__after-text">Р.
+											</div>
+										</div>
+										<!-- /+e.td.col.form-group-->
+									</div>
+								</div>
+								<div class="sTable__tr sTable__tr--total strong small">
+									<div class="row">
+										<div class="col">20 Ед.</div>
+										<div class="col">352 чел.</div>
+										<div class="col">200 чел.</div>
+										<div class="col">60 чел.</div>
+										<div class="col">300 000 р.</div>
+										<div class="col">300 000 р.</div>
+										<div class="col">300 000 р.</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -365,40 +473,42 @@
 							</div>
 						</div>
 						<div class="sAside__head">
-							<div class="h6 strong mb-0">Общие данные по Разделу 1</div>
+							<div class="h6 strong mb-0">Общие данные по Разделу 2</div>
+						</div>
+						<div class="sAside__group">
+							<div class="row align-items-center">
+								<div class="col text-secondary fw-500">Количество структур</div>
+								<div class="col-auto h6-mb-0 strong">250 ед.</div>
+							</div>
+						</div>
+						<div class="sAside__group">
+							<div class="text-secondary mb-3">Количество сотрудников</div>
+							<div class="sAside__group-item">
+								<div class="small mb-1">Всего</div>
+								<div class="h6 strong">600 чел.</div>
+							</div>
+							<div class="sAside__group-item">
+								<div class="small mb-1">Имеющих профильное образование</div>
+								<div class="h6 strong">600 чел.</div>
+							</div>
+							<div class="sAside__group-item">
+								<div class="small mb-1">Направлены на работу с молодежью</div>
+								<div class="h6 strong">600 чел.</div>
+							</div>
 						</div>
 						<div class="sAside__group">
 							<div class="text-secondary mb-3">Объем финансирования</div>
 							<div class="sAside__group-item">
-								<div class="small mb-1">Бюджет субъекта РФ</div>
-								<div class="h6 strong">25 000 000 руб.</div>
-							</div>
-							<div class="sAside__group-item">
-								<div class="small mb-1">Местный бюджет</div>
-								<div class="h6 strong">5 000 000 руб.</div>
-							</div>
-						</div>
-						<div class="sAside__group">
-							<div class="text-secondary mb-3">Гранты физ. и юр. лицам</div>
-							<div class="sAside__group-item">
-								<div class="small mb-1">Количество выданных грантов</div>
-								<div class="h6 strong">150 шт.</div>
-							</div>
-							<div class="sAside__group-item">
-								<div class="small mb-1">Объем грантовых средств</div>
+								<div class="small mb-1">Расходы на организацию и проведение мероприятий, содействие в организации и проведении мероприятий</div>
 								<div class="h6 strong">552 000 000 руб.</div>
 							</div>
-						</div>
-						<div class="sAside__group">
 							<div class="sAside__group-item">
-								<div class="small mb-1">Численность молодежи, зедействованной в программных мероприятиях по всем направлениям</div>
-								<div class="h6 strong">150 000 чел.</div>
+								<div class="small mb-1">Расходы на выполнение административных функций</div>
+								<div class="h6 strong">52 000 000 руб.</div>
 							</div>
-						</div>
-						<div class="sAside__group">
 							<div class="sAside__group-item">
-								<div class="small mb-1">Количество детских и молодежных общественных объединений, всего</div>
-								<div class="h6 strong">150 </div>
+								<div class="small mb-1">Расходы на ремонт и капитальное строительство</div>
+								<div class="h6 strong">52 000 000 руб.</div>
 							</div>
 						</div>
 					</div>
