add alert and  invalid alert

--- a/public/00.html
+++ b/public/00.html
@@ -89,6 +89,73 @@
 				</div>
 			</div>
 		</div>
+		<div class="py-5 container">
+			<div class="row">
+				<div class="col-5 mb-3">
+					<div class="display-4">Alerts</div>
+				</div>
+				<div class="col mb-3">
+					<div class="alert alert-primary" role="alert">A simple primary alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-secondary" role="alert">A simple secondary alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-success" role="alert">
+						<svg class="icon icon-success ">
+							<use xlink:href="img/svg/sprite.svg#success"></use>
+						</svg>A simple success alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-danger" role="alert">
+						<svg class="icon icon-danger ">
+							<use xlink:href="img/svg/sprite.svg#danger"></use>
+						</svg>A simple danger alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-warning" role="alert">
+						<svg class="icon icon-bell ">
+							<use xlink:href="img/svg/sprite.svg#bell"></use>
+						</svg>A simple warning alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-info" role="alert">A simple info alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+					<div class="alert alert-dark" role="alert">A simple dark alert—check it out!
+						<div class="alert__close alert__close--js">
+							<svg class="icon icon-close ">
+								<use xlink:href="img/svg/sprite.svg#close"></use>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!--  start modals-->
 		<div class="modal-win" id="modal-call" style="display: none">
 			<div class="form-wrap">
