--- a/public/04.html
+++ b/public/04.html
@@ -106,17 +106,17 @@
 					<div class="sTable__inner">
 						<div class="sTable__head">
 							<div class="row">
-									<div class="sTable__th col">Бюджет <br> субъекта РФ
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Бюджет <br> субъекта РФ
 									</div>
-									<div class="sTable__th col">Местный <br> бюджет
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Местный <br> бюджет
 									</div>
-									<div class="sTable__th col">Количество <br> выданных грантов
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Количество <br> выданных грантов
 									</div>
-									<div class="sTable__th col">Объем грантовых средств...
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Объем грантовых средств...
 									</div>
-									<div class="sTable__th col">Численность молодежи, зедействованной...
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Численность молодежи, зедействованной...
 									</div>
-									<div class="sTable__th col">Количество детских и молодежных 
+									<div class="sTable__th col" data-toggle="popover" data-placement="auto" data-content="Численность молодежи, зедействованной в программных мероприятиях по всем направлениям">Количество детских и молодежных 
 									</div>
 							</div>
 						</div>
@@ -136,6 +136,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -156,9 +158,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -177,6 +181,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -197,9 +203,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -218,6 +226,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -238,9 +248,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -259,6 +271,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -279,9 +293,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -300,6 +316,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -320,9 +338,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -341,6 +361,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -361,9 +383,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -382,6 +406,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -402,9 +428,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -423,6 +451,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -443,9 +473,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -476,6 +508,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -496,9 +530,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
@@ -519,6 +555,8 @@
 											<input class="form-control form-control-sm is-invalid" type="text" value="3 000 000" placeholder="0"/>
 											<div class="sTable__after-text">ШТ.
 											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
+											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
 										<div class="sTable__td col form-group">
@@ -539,9 +577,11 @@
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
-										<div class="sTable__td col form-group">
-											<input class="form-control form-control-sm" type="text" value="" placeholder="0"/>
+										<div class="sTable__td col form-group is-invalid">
+											<input class="form-control form-control-sm is-invalid" type="text" value="" placeholder="0"/>
 											<div class="sTable__after-text">Р.
+											</div>
+											<div class="form-group-alert" data-toggle="popover" data-placement="auto" data-content="Эти данные не соответсвуют отчету № 125 от 18.08.2020">i 
 											</div>
 										</div>
 										<!-- /+e.td.col.form-group-->
