add  sticky menu

--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
 		<!-- modal libs-->
 		<!-- slider libs-->
 		<script src="libs/swiper/js/swiper.min.js"></script>
+		<script src="libs/hc-sticky/hc-sticky.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
