--- a/public/03.html
+++ b/public/03.html
@@ -122,6 +122,7 @@
 		<!-- modal libs-->
 		<!-- slider libs-->
 		<script src="libs/swiper/js/swiper.min.js"></script>
+		<script src="libs/hc-sticky/hc-sticky.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
