--- a/public/06.html
+++ b/public/06.html
@@ -350,6 +350,7 @@
 		<!-- modal libs-->
 		<!-- slider libs-->
 		<script src="libs/swiper/js/swiper.min.js"></script>
+		<script src="libs/hc-sticky/hc-sticky.js"></script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
