--- a/public/04.html
+++ b/public/04.html
@@ -121,6 +121,22 @@
 							</div>
 						</div>
 						<div class="sTable__body">
+							<div class="sTable__group-tr py-0">
+								<div class="sTable__row row">
+									<div class="sTable__td col col-top pb-0">
+									</div>
+									<div class="sTable__td col col-top pb-0">
+									</div>
+									<div class="sTable__td col col-top pb-0">
+									</div>
+									<div class="sTable__td col col-top pb-0">
+									</div>
+									<div class="sTable__td col col-top pb-0">
+									</div>
+									<div class="sTable__td col col-top pb-0">
+									</div>
+								</div>
+							</div>
 							<div class="sTable__group-tr">
 								<p class="strong"> 1. Вовлеченность молодежи в инновационную деятельность и научно-техническое творчество</p>
 								<div class="sTable__tr">
@@ -485,12 +501,12 @@
 								</div>
 								<div class="sTable__tr sTable__tr--total strong small">
 									<div class="row">
-										<div class="col">15 000 000 р.</div>
-										<div class="col">5 000 000 р.</div>
-										<div class="col">10 шт.</div>
-										<div class="col">12 000 000 р.</div>
-										<div class="col">12 500 чел.</div>
-										<div class="col">150</div>
+										<div class="col col--hover">15 000 000 р.</div>
+										<div class="col col--hover">5 000 000 р.</div>
+										<div class="col col--hover">10 шт.</div>
+										<div class="col col--hover">12 000 000 р.</div>
+										<div class="col col--hover">12 500 чел.</div>
+										<div class="col col--hover">150</div>
 									</div>
 								</div>
 							</div>
